# alfred-agent-platform-v2

./: .coveragerc  .editorconfig  .env.example  .env.sample  .envrc  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .isort.cfg  .licence_waivers  .mypy-baseline.txt  .pre-commit-config.yaml  .sops.yaml  .trivyignore  AGENT_FIXES.md  AGENT_FIXES_SUMMARY.md  AGENT_SERVICE_INTEGRATION.md  ALFRED-CORE-ASSESSMENT-REPORT.md  ALIGNMENT-SUMMARY.md  BETA-DEPLOYMENT-STATUS.md  BETA-HARDENING-COMPLETE.md  BLACK-FORMAT-INSTRUCTIONS.md  CHANGELOG.md  CI-DEBT-TRACKING.md  CI-OVERRIDE-REQUEST.md  CI_CLEANUP_PLAN.md  CI_DEBUG.md  CI_FIXES.md  CLAUDE.md  CLEANUP-AND-STABILIZATION-EXECUTION-REPORT.md  CLEANUP-AND-STABILIZATION-SUMMARY.md  CLEANUP-IMPLEMENTATION.md  CLEANUP-SPRINT-FINAL.md  CLEANUP-SPRINT-STATUS.md  CLEANUP-STRATEGY.md  CONTRIBUTING.md  CORE_VALIDATION_RESULTS.md  (+323 more)
.ci-skip/: skip-benchmark.txt  skip-integration-test.txt  skip-lint.txt  skip-validate.txt
.docs/: add-bizdev-backlog-option.sh  board-sync-20250524.md  board-sync-20250524125758.txt  board-sync-20250524135020.txt  board-sync-bizdev-backlog-20250524130417.txt  board-sync-bizdev-backlog-cli-20250524133912.txt  board-sync-cli.sh  board-sync-execution-20250524142859.txt  board-sync-manual-instructions.md  board-sync-pat-required.md  board-sync-run-20250524142106.txt  board-sync-simulation.sh  board-update-bizdev-20250524.md  graphql-board-sync-fixed.sh  graphql-board-update-20250524.md  graphql-script-ready.sh
.githooks/: post-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  auto-merge-docs.yml  ci.Dockerfile  dependabot.yml  mergify.yml  pull_request_template.md  settings.yml  skip-tests-for-healthcheck.yml
.gitignore.d/: mypy.gitignore
agent-bizdev/: Dockerfile  health.sh
alertmanager/: config.yml
alfred/: __init__.py  protocols.py
alfred_sdk/: __init__.py
api/: CHANGELOG_PHASE2.md
app/: agent_bizdev_health.py
artifacts/: bizops_prod_smoke_ready.md
backup-tmp/: responder.py
backup_20250511_164713/: docker-compose.all.yml  docker-compose.combined.yml  docker-compose.dev.yml  docker-compose.monitoring-fixed.yml  docker-compose.monitoring.yml  docker-compose.override.agent.yml  docker-compose.override.storage.yml  docker-compose.supabase-config.yml  docker-compose.yml
bench/: build_profile.txt  cold_start.json  cold_start.local.txt  cold_start.sh
bench-soak/: README.md
bootstrap/: Dockerfile.postgres-hardened  Dockerfile.postgres-init  init-storage-schema.sh  storage-schema.sql
builder/: channel_blueprint.md
cleanup-temp/: cleanup.sh
common/: prompt_builder.py
config/: redis.conf
core-baseline/: audit.hash
custom-storage-service/: Dockerfile  build.sh  ensure-storage-schema.sql  entrypoint.sh
deploy/: docker-compose.diagnostics.yml  public-setup.sh
dev/: Dockerfile
diagnostics/: metrics-repro.yml  rca_results.md
docker-assets/: health.json
docker-compose/: README.md  docker-compose.alerting.yml  docker-compose.dev.yml  docker-compose.local.yml.template  docker-compose.prod.yml
docs/: ADDITIONAL_PERMISSIONS.md  ADR-001.md  AGENT_DEPLOYMENT_GUIDE.md  ALERTING.md  ALFRED-CORE-ASSESSMENT-REPORT.md  CI-GATE-CLEANUP.md  CLAUDE.md  CLAUDE_GITHUB_SETUP.md  COORDINATOR.md  DECISION_LOG.md  ENV-MANAGEMENT-GUIDE.md  ENVIRONMENT_VARIABLES.md  ENV_MANAGEMENT_OVERVIEW.md  ENV_SETUP_GUIDE.md  FAISS-MIGRATION-GUIDE.md  GA_SCOPE_CHECKLIST.md  GITHUB_TOKEN_REQUIREMENTS.md  GLOBAL_INSTRUCTIONS.md.md  HEALTH_CHECK_IMPLEMENTATION_GUIDE.md  HEALTH_CHECK_IMPLEMENTATION_STATUS.md  HEALTH_CHECK_STANDARD.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_UPDATED.md  INFRASTRUCTURE_STATUS_UPDATED.md  LEAN-CI-GUIDE.md  LFS-CLEANUP-REPORT.md  LFS-CLEANUP-SUMMARY.md  LOCAL_PREFLIGHT_CHECKLIST.md  METRICS_EXPORTER_UPGRADE.md  MODEL_REGISTRY_DESIGN.md  PHASE2_THREAT_MODEL.md  PHASE2_VISION.md  PORT-ALLOCATION.md  POST_ROLLOUT_ACTIONS.md  PROBES.md  PROD-ROLLOUT-BIZOPS-2.0.0.md  PROJECT_INSTRUCTIONS.md  PROJECT_INSTRUCTIONS_O3.md  README.md  SECURITY.md  (+54 more)
eval/: test_eval_loop.py
examples/: test_dispatcher.py  test_webhook.py
health-check-review/: HEALTH_CHECK_ARCHITECTURE_REVIEW.md  HEALTH_CHECK_IMPLEMENTATION_GUIDE.md  HEALTH_CHECK_SUMMARY.md  HEALTH_CHECK_TEST_PLAN.md  MONITORING_VALIDATION.md  README.md  add-health-endpoints.py  docker-compose-clean.yml  docker-compose-optimized.yml  example-health.py  example-healthcheck.sh  fix-health-endpoints-specific.sh  health-check-proxy.yml  health-check.sh  restore-health-checks.sh  startup-sequence.yml  validate-health-checks.sh  verify-service-health.sh
healthcheck/: Dockerfile  Dockerfile.grafana  Dockerfile.prometheus  healthcheck.sh
helpers/: fix-fastapi-routes.py  fix-intent-constants.py  minimal-health-services.py
hooks/: no_dist_packages.sh
k8s/: bench-burnrate-rule.yaml  keycloak-admin-secret.yaml  workload.yaml
libs/: resilience.py  resilient_client.py
load/: alert_group.py
local-analysis/: generate_compose_fixed.py  summary.txt
metrics/: scripts_inventory.csv
migrations/: 0001_supabase_channels.sql  (+3 more)
rag-gateway/: Dockerfile  Dockerfile.new  pyproject.toml  requirements.txt
rag-gateway/src/: app.py
services/atlas-rag-gateway/: Dockerfile  README.md  pyproject.toml
services/atlas-rag-gateway/rag_gateway/: backend.py  main.py
services/atlas-worker/: Dockerfile  Dockerfile.optimized  README.md  pyproject.toml  requirements.txt
services/atlas-worker/atlas/: __init__.py  bus_client.py  main.py  metrics.py  openai_client.py  rag_client.py  supabase_client.py
services/slack_mcp_gateway/: .dockerignore  .gitignore  Dockerfile  Dockerfile.bak-20250516-201214  README.md  __init__.py  bolt_socket.py  docker-compose.yml  echo_agent.py  health.test.js  package-lock.json  package.json  pyproject.toml  redis_bus.py  requirements.txt  responder.py  run-echo-agent.sh  server.js  translator.py
services/slack_mcp_gateway/.github/workflows/: python-tests.yml
services/slack_mcp_gateway/tests/: test_translator.py
slack-bot/: Dockerfile  pyproject.toml  requirements.txt
slack-bot/src/: app.py
(+3162 files in other folders)
