[tool.poetry]
name = "alfred-agent-platform"
version = "0.8.1"
description = "Alfred Agent Platform"
authors = ["Alfred Team <team@alfred.ai>"]

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = "^2.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | venv
  | env
  | node_modules
  | youtube-test-env
  | migrations
  | cleanup-temp
  | docs/archive
  | docs/tools
  | examples/test_dispatcher\.py
  | examples/test_webhook\.py
  | tests/integration/financial_tax/test_integration\.py
  | tests/integration/test_exactly_once_processing\.py
  | tests/smoke/test_telegram_adapter\.py
)/
'''
