[tool.poetry]
name = "alfred-agent-platform"
version = "0.8.1"
description = "Alfred Agent Platform"
authors = ["Alfred Team <team@alfred.ai>"]

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = "^2.0.7"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
isort = {version = "5.12.0", python = "^3.11"}


[tool.poetry.group.test.dependencies]
respx = ">=0.21.1,<0.22.0"
sentence-transformers = ">=2.7.0,<2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | venv
  | env
  | node_modules
  | youtube-test-env
  | migrations
  | cleanup-temp
  | docs/archive
  | docs/tools
  | examples/test_dispatcher\.py
  | examples/test_webhook\.py
  | tests/integration/financial_tax/test_integration\.py
  | tests/integration/test_exactly_once_processing\.py
  | tests/smoke/test_telegram_adapter\.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    ".git/*",
    ".mypy_cache/*",
    ".venv/*",
    "venv/*",
    "env/*",
    "node_modules/*",
    "youtube-test-env/*",
    "migrations/*",
    "cleanup-temp/*",
    "docs/archive/*",
    "docs/tools/*"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
namespace_packages = true
explicit_package_bases = true
exclude = [
    'slack-app',
    '.*/tests/.*',
    'services/mission-control.old',
]

[[tool.mypy.overrides]]
module = "slack-app.*"
ignore_errors = true

[tool.ruff.lint]
ignore = ["D401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D400","D401","F401"]
