[tool.poetry]
name = "rag-gateway"
version = "0.1.0"
description = "Retrieval-Augmented Generation Gateway for Atlas"
authors = ["Infra Crew <infra@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.29"}
qdrant-client = "^1.7"
sentence-transformers = "^2.6"
redis = "^5.0"
httpx = "^0.27"
prometheus-client = "^0.20"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"