[tool.poetry]
name = "slack-mcp-gateway"
version = "0.1.0"
description = "Slack Gateway for Mission Control Platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "slack_mcp_gateway"}]

[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.18.0"
redis = "^4.6.0"
jsonschema = "^4.18.0"
pytest = "^7.3.1"
requests = "^2.30.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
